# hash-sig-benchmarks

./: .gitignore  Makefile  README.md  benchmark.py
rust_benchmark/: Cargo.toml
rust_benchmark/src/: main.rs
zig_benchmark/: build.zig  build.zig.zon
zig_benchmark/src/: main.zig
