[package]
name = "rust_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
hashsig = { git = "https://github.com/b-wagn/hash-sig", branch = "main" }
rand = { version = "0.9", features = ["std_rng"] }
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
bincode = "1.3"

[[bin]]
name = "keygen_bench"
path = "src/main.rs"

